# My_NixOS_Config

./: .gitignore  .gitmodules  .sops.yaml  README.md  flake.nix  justfile
fonts/: monaspice_nerd_font.nix
home-manager/: core.nix  dotfiles.nix  home.nix  homeserver.nix  secrets.yaml  worklaptop.nix
home-manager/core/: dotfiles.nix  packages.nix  programs.nix  services.nix  user.nix
home-manager/core/programs/: yazi.nix
home-manager/dotfiles/: .gitconfig  .gitignore
home-manager/dotfiles/.config/nushell/plugins/: .gitignore  Cargo.toml  build.rs  nu_plugin_audio_hook
home-manager/dotfiles/.config/nushell/plugins/src/: lib.rs
home-manager/homeserver/: containers.nix  packages.nix  programs.nix  services.nix  ssh.nix
home-manager/homeserver/containers/: blog.nix  caddy.nix  data_handling.nix  gitea.nix  media.nix  metrics.nix  monitoring.nix  nextcloud.nix  site.nix  work_tools.nix
home-manager/worklaptop/: defaultapps.nix  packages.nix  programs.nix  services.nix  theming.nix
modules/: monaspice_font.nix
nixos/: configuration.nix  core.nix  hardware-configuration.nix  homeserver.nix  worklaptop.nix
nixos/core/: packages.nix  programs.nix
nixos/homeserver/: .configuration.nix.swp  configuration.nix  environment.nix  filesystems.nix  firewall.nix  hardware-configuration.nix  packages.nix  programs.nix  services.nix  virtualisation.nix
nixos/worklaptop/: configuration.nix  environment.nix  hardware-configuration.nix  packages.nix  programs.nix  services.nix  theming.nix  virtualisation.nix
scripts/: boostrap.py  bootstrap.py  edit.py  packages.bb
(+144 files in other folders)
