[package]
name = "plugins"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# This is a bit of a workaround to make sure that the plugins aren't unnecessarily
# built when the main project is built while offloading version management to cargo.
# Obviously, this "target" doesn't exist, but it is handy for making plugin management easier.
[target.plugins.dependencies]
nu_plugin_audio_hook = { git = "https://github.com/FMotalleb/nu_plugin_audio_hook", version = "0.1.12" }
# nu_plugin_from_hdf5 = { git = "https://github.com/Berrysoft/nu_plugin_from_hdf5", version = "0.1.0" }
# nu_plugin_from_parquet = "0.0.0"
nu_plugin_inc = "0.90.1"
# nu_plugin_plot = "0.74.0"
nu_plugin_units = "0.1.0"

[build-dependencies]
data-encoding = "2.5.0"
flate2 = "1.0.28"
git2 = "0.18.2"
reqwest = { version = "0.11.24", features = ["json", "blocking"] }
ring = "0.17.8"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tar = "0.4.40"
toml = "0.8.10"
unstringify = "0.1.4"
